# multi_pair_backtest_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: .$产品架构.drawio.bkp  .$技术架构.drawio.bkp  .$技术架构.drawio.dtmp  .$策略设计.drawio.bkp  README.md  产品架构.drawio  技术架构.drawio  策略设计.drawio
doc/QA/: 1_仓位控制策略和定价策略.md  2_量化交易策略.md  3_指标设计_相对振动幅度_折叠率.md  4_比特币价格是否会不断创新高.md  5_比特币价格与涨跌概率的关联.md  6_策略Mk1明细.md  7_等仓位调仓策略.md  8_不等仓位调仓策略.md  9_如何利用预测价格模型计算出目标仓位占比.md  READMD.md
src/: config.rs  data_log.rs  lib.rs  main.rs  order.rs  protocol.rs  script.rs  user.rs  utils.rs
src/assert/: asset.rs  asset_manager.rs  mod.rs  trading_pair.rs
src/asset/: asset.rs  asset_manager.rs  asset_manager_v2.rs  asset_v2.rs  mod.rs  trading_pair.rs
src/data/: funding_rate.rs  kline.rs  mod.rs
src/data_runtime/: mod.rs  user.rs
src/data_runtime/asset/: asset.rs  asset_leveraged.rs  asset_map.rs  asset_map_v3.rs  asset_union.rs  mod.rs
src/data_runtime/order/: mod.rs  order.rs  order_manager.rs  order_manager_v3.rs  order_v3.rs  trading_pair_order_manager_map.rs  trading_pair_order_manager_map_v3.rs
src/data_source/: data_manager.rs  funding_rate.rs  kline.rs  mod.rs
src/data_source/db/: mod.rs
src/data_source/trading_pair/: mod.rs  trading_pair.rs  trading_pair_map.rs
src/runner/: mod.rs
src/runner/back_trade/: config.rs  mod.rs  runner.rs  runner_leveraged.rs
src/runner/logger/: data_logger.rs  kline_unit.rs  mod.rs  order_unit.rs  (+2 more)
src/strategy/: logger.rs  mk1.rs  mk2.rs  mk3.rs  mk3_2.rs  mk4.rs  mk5.rs  mk_test.rs  mk_test_leveraged.rs  mod.rs  strategy_mk_test.rs
(+50 files in other folders)
